fix: gap removed

--- a/assets/frontend/mpwem_style.css
+++ b/assets/frontend/mpwem_style.css
@@ -2313,6 +2313,7 @@ h3.mep_list_date {
 .mep-list-footer ul li h5,
 .mep-list-footer ul li h6 {
   font-weight: 400;
+  margin: 0;
 }
 
 .evl-cc {
@@ -4502,7 +4503,6 @@ input.mpe-new-input-group-field {
   flex-direction: column;
   flex-wrap: wrap;
   gap: 5px 10px;
-  padding: 10px 0;
 }
 
 .mep_event_grid_item .mep_list_org_name, .mep_event_grid_item .mep_list_location_name, .mep_event_grid_item .mep_list_event_date {
