--- a/assets/sass/styles/_mpwem_style.scss
+++ b/assets/sass/styles/_mpwem_style.scss
@@ -2063,6 +2063,7 @@ h3.mep_list_date {
 .mep-list-footer ul li h5,
 .mep-list-footer ul li h6 {
 	font-weight: 400;
+	margin:0;
 }
 .evl-cc {
 	margin-left: 0;
@@ -4033,7 +4034,6 @@ input.mpe-new-input-group-field {
 	flex-direction:column;
 	flex-wrap: wrap;
 	gap:5px 10px;
-	padding: 10px 0;
 }
 
 .mep_event_grid_item .mep_list_org_name, .mep_event_grid_item .mep_list_location_name, .mep_event_grid_item .mep_list_event_date{
